--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,30 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_main">MainActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="all_coins">All Coins</string>
+    <string name="favourites">Favourites</string>
+    <string name="settings">Settings</string>
+    <string name="dark_mode">Dark Mode</string>
+    <string name="coins_list_error">Failed to fetch coins list. Please try again.</string>
+
+    <string name="no_favourites">You have not set any favourites</string>
+    <string name="added_to_favourite">%1$s added to favourite</string>
+    <string name="removed_to_favourite">%1$s removed from favourite</string>
+
+    <string name="historical_data_error">Couldn\'t fetch historical data. Please try again</string>
+    <string name="line_chart_title">Price Chart for %1$s days\n(x-axis: Date, y-axis: Price in $)</string>
+    <string name="no_coins_available">no coins avaiable</string>
+
+    <string name="last_price">Last Price</string>
+    <string name="percentage_change_24h">24h Chg %</string>
+    <string name="name_vol">Name / Vol</string>
 </resources>
